--- a/clang-pure.cabal
+++ b/clang-pure.cabal
@@ -59,6 +59,7 @@ library
                        bytestring >= 0.10.6,
                        stm >= 2.4.4,
                        singletons >= 2.0.1,
+                       singletons-th,
                        microlens >= 0.4.2.1,
                        microlens-contra >= 0.1.0.1
   hs-source-dirs:      src/
